# examples

algorithm/: readme.md
algorithm/back_tracking/: maze_puzzle.c  n_queens.c  readme.md
algorithm/divide_and_conquer/: get_max.c  hanoi.c  readme.md
algorithm/dp/: knapsack01.c  readme.md
algorithm/find/: binary_search.c  hash_search.c  interpolation_search.c  linear_search.c
algorithm/greedy/: fractional_knapsack.c  readme.md
algorithm/min_spanning_tree/: kruskal.c  prim.c  readme.md
algorithm/recursion/: fibonacci.c  readme.md
algorithm/shortest_path/: dijkstra.c  floyd_warshall.c  readme.md
android/FFmpegPlayer/: settings.gradle
android/FFmpegPlayer/app/src/main/cpp/: CMakeLists.txt  com_lwl_ffmpegplayer_MainActivity.cpp  com_lwl_ffmpegplayer_MainActivity.h  com_lwl_ffmpegplayer_NativeFFmpegPlayer.cpp  com_lwl_ffmpegplayer_NativeFFmpegPlayer.h  ffmpeg_pipeline.cpp  ffmpeg_pipeline.h  log.h  play_control_observer_interface.h  player.cpp  player.h  wapped_ffmpeg.cpp  wapped_ffmpeg.h
android/FFmpegPlayer/app/src/main/cpp/egl/: egl_core.cpp  egl_core.h
android/FFmpegPlayer/app/src/main/cpp/ffmpeg/: ffmpeg_audio_decoder.cpp  ffmpeg_audio_decoder.h  ffmpeg_codec_base.cpp  ffmpeg_codec_base.h  ffmpeg_demuxer.cpp  ffmpeg_demuxer.h  ffmpeg_video_decoder.cpp  ffmpeg_video_decoder.h  ffmpep_audio_decorder.cpp  ffmpep_audio_decorder.h  packet_queue.cpp  packet_queue.h
android/FFmpegPlayer/app/src/main/cpp/include/libavutil/: ffversion.h
android/FFmpegPlayer/app/src/main/cpp/interface/: play_control_observer_interface.h  seek_observer_interface.h
android/FFmpegPlayer/app/src/main/cpp/opengles/: wapped_shader_program.cpp  wapped_shader_program.h  wapped_texture.cpp  wapped_texture.h
android/FFmpegPlayer/app/src/main/cpp/opensles/: openSlEs_base.cpp  openSlEs_base.h  openSlEs_pcm_render.cpp  openSlEs_pcm_render.h
android/FFmpegPlayer/app/src/main/cpp/render/audio/: audio_track_render.cpp  audio_track_render.h  openSlEs_pcm_render.cpp  openSlEs_pcm_render.h
android/FFmpegPlayer/app/src/main/cpp/render/video/: native_window_render.cpp  native_window_render.h  opengles_render.cpp  opengles_render.cpp.bak  opengles_render.h  opengles_render.h.bak  opengles_render1.cpp  opengles_render1.h  opengles_render_interface.h  video_render_interface.h  visual_audio_render.cpp  visual_audio_render.h
android/FFmpegPlayer/app/src/main/cpp/scale/: ffmpeg_scale.cpp  ffmpeg_scale.h  libyuv_scale.cpp  libyuv_scale.h  opengl_scale.cpp  opengl_scale.h  scale_factory.h
android/FFmpegPlayer/app/src/main/cpp/utils/: audio_frame.h  log.h  native_image.h  openSlEs_base.cpp  openSlEs_base.h  thread_base.cpp  thread_base.h  thread_safe_queue.h
android/OpenGLES/: settings.gradle
android/OpenGLES/app/src/main/cpp/: CMakeLists.txt  com_example_opengles_ShowPngActivity.cpp  com_example_opengles_ShowPngActivity.h  com_example_opengles_TriangleRenderActivity.cpp  com_example_opengles_TriangleRenderActivity.h  egl_core.cpp  egl_core.h  log.h  png_decoder.cpp  png_decoder.h  shader2.h  show_png_conductor.cpp  show_png_conductor.h  triangle_render.cpp  triangle_render.h  wapped_shader_program.cpp  wapped_shader_program.h  wapped_texture.h
android/OpenGLES/app/src/main/cpp/libpng/: pngpriv.h
c++/: .clang-format
c++/STL/: base.cpp
c++/all/: thread_c++11
c++/c++11/: readme.md
c++/c2c++/: base.cpp  cast.cpp  clause_1.cpp  clause_2.cpp  clause_26.cpp  clause_3.cpp  clause_30.cpp  clause_4.cpp  const.cpp  inline.cpp  item_m34.cpp  item_m35.cpp  item_m8.cpp  namespace.cpp  new_delete.cpp
c++/cast/: clause_27.cpp  item_m2.cpp
c++/class_object/: assignment_operator.cpp  cast.cpp  class.cpp  clause_10.cpp  clause_11.cpp  clause_12.cpp  clause_5.cpp  clause_6.cpp  const.cpp  conversion_constructors.cpp  copy_constructors.cpp  friend.cpp  item_m2.cpp  item_m26.cpp  item_m27.cpp  item_m4.cpp  item_m5.cpp  static.cpp  string.cpp  stringcopy.cpp
c++/effective_c++/: clause_1.cpp  clause_10.cpp  clause_11.cpp  clause_12.cpp  clause_13.cpp  clause_14.cpp  clause_15.cpp  clause_16.cpp  clause_17.cpp  clause_18.cpp  clause_19.cpp  clause_2.cpp  clause_20.cpp  clause_21.cpp  clause_22.cpp  clause_23.cpp  clause_24.cpp  clause_25.cpp  clause_26.cpp  clause_27.cpp  clause_28.cpp  clause_29.cpp  clause_3.cpp  clause_30.cpp  clause_31.cpp  clause_32.cpp  clause_33.cpp  clause_34.cpp  clause_35.cpp  clause_36.cpp  clause_37.cpp  clause_38.cpp  clause_39.cpp  clause_4.cpp  clause_40.cpp  clause_41.cpp  clause_42.cpp  clause_43.cpp  clause_44.cpp  clause_45.cpp  (+15 more)
c++/exception/: clause_25.cpp  clause_29.cpp  clause_8.cpp  exception.cpp  exception_type.cpp  item_m11.cpp  item_m12.cpp  item_m13.cpp  item_m14.cpp  item_m15.cpp  throw.cpp
c++/file_operator/: base.cpp  binary_read_write.cpp  close.cpp  get_put.cpp  getline.cpp  open.cpp  seek_tell.cpp  text_read_write.cpp
c++/function/: clause_21.cpp  default_parameters.cpp  default_parameters_ext.cpp  item_m19.cpp  item_m20.cpp  overload.cpp
c++/inheritance_derive/: clause_32.cpp  clause_33.cpp  clause_34.cpp  clause_36.cpp  clause_37.cpp  clause_39.cpp  clause_40.cpp  constructors_destructor.cpp  convert.cpp  inheritance.cpp  multiple_inheritance.cpp  scope_memorymodel.cpp  virtual_inheritance.cpp  visit_private_protected.cpp
c++/input_output_stream/: base.cpp  buffer.cpp  cin.cpp  cin_cout.cpp  cout.cpp  error.cpp  redirect.cpp
c++/more_effecitve_c++/: a.out  item_m1.cpp  item_m10.cpp  item_m11.cpp  item_m12.cpp  item_m13.cpp  item_m14.cpp  item_m15.cpp  item_m16.cpp  item_m17.cpp  item_m18.cpp  item_m19.cpp  item_m2.cpp  item_m20.cpp  item_m21.cpp  item_m22.cpp  item_m23.cpp  item_m24.cpp  item_m25.cpp  item_m26.cpp  item_m27.cpp  item_m28.cpp  item_m29.cpp  item_m3.cpp  item_m30.cpp  item_m31.cpp  item_m32.cpp  item_m33.cpp  item_m34.cpp  item_m35.cpp  item_m4.cpp  item_m5.cpp  item_m6.cpp  item_m7.cpp  item_m8.cpp  item_m9.cpp
c++/multi_file_programming/: base.cpp  dup_include.h
c/array/: base.c  (+2 more)
gn/: readme
media/: RTP.docx  aac.docx  h264.docx  mp3.docx  pcm.docx  yuv.docx
opengl/: review
vscode/: hotkey
webrtc/: webrtc_dir.md
(+1677 files in other folders)
